backend-db-rahti2/kanban-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanban-app
  labels:
    app: kanban-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanban-app
  template:
    metadata:
      labels:
        app: kanban-app
    spec:
      containers:
      - name: kanban-app
        image: image-registry.apps.2.rahti.csc.fi/sdx-assignment-tolonenm/kanban-app:1.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "1Gi"
          limits:
            memory: "2Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: kanban-service
  labels:
    app: kanban-app
spec:
  ports:
  - port: 80       
    targetPort: 8080
  selector:
    app: kanban-app
