backend-db-rahti2/kanban-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanban-postgres
  labels:
    app: kanban-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanban-postgres
  template:
    metadata:
      labels:
        app: kanban-postgres
    spec:
      containers:
      - name: kanban-postgres
        image: image-registry.apps.2.rahti.csc.fi/openshift/postgresql:15-el9
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: kanban-data
          mountPath: /var/lib/pgsql/data
      volumes:
      - name: kanban-data
        persistentVolumeClaim:
          claimName: kanban-pvc 
---
apiVersion: v1
kind: Service
metadata:
  name: kanban-postgres
  labels:
    app: kanban-postgres
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: kanban-postgres
